<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="Details">Details</string>
    <string name="popular">Popular</string>
    <string name="top">Top Rated</string>
    <string name="pref_value_popular" translatable="false">popular</string>
    <string name="Settings">Settings</string>
    <string name="language">Language:</string>
    <string name="pref_language_key" translatable="false">language_key</string>
    <string name="pref_label_lang_en" translatable="false">en-US</string>
    <string name="pref_label_lang_pt" translatable="false">pt-BR</string>
    <string name="pref_value_lang_en" translatable="false">en-US</string>
    <string name="pref_value_lang_pt" translatable="false">pt-BR</string>
    <string name="tmdb">This software uses the TMDb API.</string>
    <string name="about">About</string>
    <string name="provider">com.example.popular_movies.provider</string>
    <string name="todo">TODO</string>
    <string name="no_internet">Internet connection appears to be offline</string>
    <string name="success">Added to favorites!</string>
    <string name="error">Error writing!</string>
    <string name="fav_movies">My Favorites</string>
    <string name="removed">Removed from favorites!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
